objects/PG_Catalog_Item__c.object
<CustomObject>
    <description>Represents the Catalog/Library of Anthem’s Performance Guarantees. Each has a unique configuration. This list of records and their configuration is maintained by the PG Support Team. These are associated to a Customer via creation of ‘PG Line Item’ record(s). Created per PRDCRM-51224.</description>
    <fields>
        <fullName>ANA_Minimum_Members__c</fullName>
        <label>ANA Minimum Members</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASO_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASO Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActWise_HSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActWise (HSA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actwise_Commuter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actwise (Commuter)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actwise_FSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actwise (FSA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actwise_HRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actwise (HRA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Notes_or_Special_Approvals__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field states any additional informational or special approvals required beyond CIP/CEP or Underwriting</inlineHelpText>
        <label>Additional Notes or Special Approvals</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Behavioral_Health_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavioral Health Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broad_Contract_Category__c</fullName>
        <label>Broad Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Care Management</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Case Management JAA Health Link</fullName>
                </value>
                <value>
                    <fullName>Cost of Care / Care Management</fullName>
                </value>
                <value>
                    <fullName>Integrated Imaging</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Plus</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Condition Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conflicting_PGs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field states which other PGs should not be offered alongside this PG</inlineHelpText>
        <label>Conflicting PGs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_PG_Rich_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of PG (Rich Text)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_of_PG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Legal Approved PG Language</inlineHelpText>
        <label>Description of PG</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Recommended_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Recommended Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FI_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FI Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IHM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IHM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Minimum_Members__c</fullName>
        <label>LG Minimum Members</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANA</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Virginia</fullName>
                </value>
                <value>
                    <fullName>Wisconsin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measurement_Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Measurement Terms</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Membership_System__c</fullName>
        <label>Membership System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WGS</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>ACES</fullName>
                </value>
                <value>
                    <fullName>CS90</fullName>
                </value>
                <value>
                    <fullName>CHIPS</fullName>
                </value>
                <value>
                    <fullName>Facets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyHealth_Advantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MyHealth Advantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_Catalog_Unique_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PG Catalog Unique Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Brief Description of PG (&lt;255 characters). See &apos;Description&apos; field and other fields for full details.</inlineHelpText>
        <label>PG Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Type__c</fullName>
        <label>PG Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Back Pocket Standard</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Category__c</fullName>
        <label>Performance Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Implementation Survey</fullName>
                </value>
                <value>
                    <fullName>Claims Timeliness (14 Calendar Days)</fullName>
                </value>
                <value>
                    <fullName>Claims Timeliness (30 Calendar Days)</fullName>
                </value>
                <value>
                    <fullName>Claims Financial Accuracy</fullName>
                </value>
                <value>
                    <fullName>Claims Accuracy</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment ID Card Issuance</fullName>
                </value>
                <value>
                    <fullName>Processing of Ongoing Eligibility Information</fullName>
                </value>
                <value>
                    <fullName>Ongoing ID Card Issuance</fullName>
                </value>
                <value>
                    <fullName>Average Speed to Answer</fullName>
                </value>
                <value>
                    <fullName>Call Abandonment Rate</fullName>
                </value>
                <value>
                    <fullName>First Call Resolution</fullName>
                </value>
                <value>
                    <fullName>Member Satisfaction (NPS)</fullName>
                </value>
                <value>
                    <fullName>Member Satisfaction (Service Skills)</fullName>
                </value>
                <value>
                    <fullName>Management Reports</fullName>
                </value>
                <value>
                    <fullName>Account Management/Client Team Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>Website Availability</fullName>
                </value>
                <value>
                    <fullName>Network Provider Discount</fullName>
                </value>
                <value>
                    <fullName>Total Provider Discount</fullName>
                </value>
                <value>
                    <fullName>Network Alerts</fullName>
                </value>
                <value>
                    <fullName>Provider Accessibility</fullName>
                </value>
                <value>
                    <fullName>Condition Care Enrollment Rate</fullName>
                </value>
                <value>
                    <fullName>Condition Care Engagement Rate</fullName>
                </value>
                <value>
                    <fullName>Condition Care  Member Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Heart Failure ACE Inhibitors/ARB</fullName>
                </value>
                <value>
                    <fullName>Diabetes Annual Hemoglobin A1c (HbA1c) Testing</fullName>
                </value>
                <value>
                    <fullName>Persistent Asthma Prescription Drug Dispense</fullName>
                </value>
                <value>
                    <fullName>CAD (Statin Medications)</fullName>
                </value>
                <value>
                    <fullName>Clinical Health and Wellness Foundational Package Return on Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_PG_Penalty_Tiering__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recommended PG Penalty Tiering</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Care_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Care Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_RX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting RX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Service_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Service Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_UWAIMMarketingOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting UW/AIM/Marketing/Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <label>SME</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Care Management</fullName>
                </value>
                <value>
                    <fullName>Care Management (IHM)</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Greg Hughes</fullName>
                </value>
                <value>
                    <fullName>IM</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Ingenio</fullName>
                </value>
                <value>
                    <fullName>Integrated Imaging</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Service Ops</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>UW</fullName>
                </value>
                <value>
                    <fullName>UW/Actuarial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specific_Contract_Category__c</fullName>
        <label>Specific Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AHG</fullName>
                </value>
                <value>
                    <fullName>BDTC</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>Care Management Outreach Program</fullName>
                </value>
                <value>
                    <fullName>Clinical Outcomes</fullName>
                </value>
                <value>
                    <fullName>Condition Care</fullName>
                </value>
                <value>
                    <fullName>Condition Care/MHS</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Enrollment and Engagement</fullName>
                </value>
                <value>
                    <fullName>Healthy Lifestyles</fullName>
                </value>
                <value>
                    <fullName>IHM</fullName>
                </value>
                <value>
                    <fullName>IHM/AHG</fullName>
                </value>
                <value>
                    <fullName>Integrated Imaging</fullName>
                </value>
                <value>
                    <fullName>Member Reported Outcomes</fullName>
                </value>
                <value>
                    <fullName>Metrics for MyHealth Advantage</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pharma Financial</fullName>
                </value>
                <value>
                    <fullName>Pharma Operations</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Trend</fullName>
                </value>
                <value>
                    <fullName>Utilization Measures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>THTY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>THTY</label>
        <type>Checkbox</type>
    </fields>
    <label>PG Catalog Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PG_Catalog_Unique_Identifier__c</columns>
        <columns>PG_Type__c</columns>
        <columns>SME__c</columns>
        <columns>PG_Title__c</columns>
        <columns>Broad_Contract_Category__c</columns>
        <columns>Performance_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>PGCAT-{0000}</displayFormat>
        <label>PG Catalog Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PG Catalog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>